# TwoNickels

./: Makefile.am  Makefile.in  aclocal.m4  bootstrap  configure  configure.ac  parse.pl  split.pl
dxf2osm/: Makefile.am  Makefile.in  dxf2osm.cpp
dxf2vrml/: Makefile.am  Makefile.in  dxf2vrml.cpp
dxfsphere/: Makefile.am  Makefile.in
include/: config.h  config.h.in
include/dime/: Base.h
include/dime/convert/: convertOSM.h  layerdata.h
include/dime/entities/: Entity.h  Hatch.h  MText.h
proj/: Makefile.am  Makefile.in  configure.ac  libtool  proj.cpp
src/: Makefile.am  Makefile.in  Model.cpp
src/classes/: Makefile.am  Makefile.in
src/convert/: Makefile.am  Makefile.in  convert.cpp  convertosm.cpp  layerdata.cpp  pointconvert.cpp
src/entities/: Entity.cpp  Hatch.cpp  MText.cpp  Makefile.am  Makefile.in  Point.cpp
src/objects/: Makefile.am  Makefile.in
src/records/: Makefile.am  Makefile.in  StringRecord.cpp
src/sections/: EntitiesSection.cpp  Makefile.am  Makefile.in
src/tables/: Makefile.am  Makefile.in
src/util/: Makefile.am  Makefile.in
t/samples/: OUT_1.osm.bz2  xaa.test
